--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  appearance: none;
+}
 
 @layer utilities {
   .text-balance {
