--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,12 @@ input[type="search"]::-webkit-search-cancel-button {
   appearance: none;
 }
 
+
+/* ::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+} */
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
